--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "style-loader": "^3.3.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^3.11.3"
+  },
+  "dependencies": {
+    "mapbox-gl": "^2.9.1"
   }
 }
