--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-dev-server": "^3.11.3"
   },
   "dependencies": {
+    "@types/mapbox-gl": "^2.7.3",
     "mapbox-gl": "^2.9.1"
   }
 }
